Fix Layout Issue for index.php File for .homepage Class

--- a/css/grid.css
+++ b/css/grid.css
@@ -34,15 +34,15 @@ main {
   padding: 0 auto;
   display: grid;
   grid-template-rows: repeat(auto, 1fr);
-  /*grid-template-columns: repeat(auto, minmax(200px,auto));*/
   grid-gap: 0;
 }
 @media only screen and (min-width: 800px) {
   .homePage {
-    margin: 0 auto;
+    min-height: 100%;
+    margin: 8vh 0 1vh;
     padding: 0 auto;
     display: grid;
-    grid-template-rows: 88vh;  /*repeat(auto, 1fr)*/
+    grid-template-rows: auto 16vh auto; 
     align-items: center;
     justify-content: center;
     /*grid-template-columns: repeat(2, 49%);
